fix: overflow card theme

--- a/apps/gauzy/src/app/@theme/layouts/one-column/one-column.layout.scss
+++ b/apps/gauzy/src/app/@theme/layouts/one-column/one-column.layout.scss
@@ -168,6 +168,7 @@ nb-sidebar[tag='menu-sidebar'] {
     .scrollable {
       background-color: nb-theme(background-basic-color-1);
       border-radius: nb-theme(border-radius);
+      overflow-y: unset;
     }
   }
 
